# bambootex

./: README.md  main.py  pyproject.toml
bambootex/: __init__.py
