[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bambootex"
version = "0.1.0"
description = "Convert pandas DataFrames into publication-quality LaTeX/PDF tables"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[project.urls]
Repository = "https://github.com/h3ssto/bambootex"
